ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nice-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
  - host: dummy.com
    http:
      paths:
      - pathType: Prefix
        path: "/(.*)"
        backend:
          service:
            name: empty-mind
            port:
              number: 8081
